Added memory constraints since the build would fail on OOM.